changes to the head

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%www.wattevents.comL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link 
     rel="stylesheet" 
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" 
@@ -15,12 +15,11 @@
       name="description"
       content="Watt Event - Premier Casino Rental Services for All Your Event Needs"
     />
-    <link rel="apple-touch-icon" href="%www.wattevent.com%/Wattenbarger Events.png" />
-    <!--
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Wattenbarger Events.png" />    <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%www.wattevent.comL%/manifest.json" />
+    <link rel="manifest" href="%%PUBLIC_URL%/%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
