--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
       name="description"
       content="Watt Event - Premier Casino Rental Services for All Your Event Needs"
     />
+    <meta name="google-site-verification" content="d3m93rMi_M0LZGa1tq3vopbQ8TQIH0wmkio-ieZ1ZoA" />
+    
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/Wattenbarger Events.png" />    <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
